Development dist and unification of configs - runServer.sh now uses run.sh from dist